src/shared/adjusters/css/adjusters.css
/* ... */
[title]:hover:after{
    left:0px;
    opacity:1;
}

.gpii-prefsEditor-addToMyPreferencesLabel[title]:after {
    content:attr(tooltip-unchecked);
}

input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-addToMyPreferencesLabel[title]:after {
    content:attr(tooltip-checked);
}

.gpii-increaseSize-magnifierPositionLabel[title] {
    position:relative;
}

.gpii-increaseSize-magnifierPositionLabel[title]:after {
    content: attr(tooltip);
    line-height: 1em !important;
    font-size: 1em;
    white-space:normal;
}

/*
    Style for contrast
*/
.gpii-prefsEditor-theme-yb {
    color: yellow;
    background-color: black;
}

.gpii-prefsEditor-theme-bw {
    color: black;
    background-color: white;
}

.gpii-prefsEditor-theme-by {
    color: black;
    background-color: yellow;
}

.gpii-prefsEditor-theme-wb {
    color: white;
    background-color: black;
}

.gpii-prefsEditor-theme-inverted {
    color: #e9e9e9;
    background-color: #393536;
}

.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-default,
.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-default span,
.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-default .fl-crossout {
    background-color: #e9e9e9 !important;
    border-color: #393536 !important;
    color: #393536 !important;
}

.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-inverted,
.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-inverted span,
.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-inverted .fl-crossout {
    background-color: #393536 !important;
    border-color: #e9e9e9 !important;
    color: #e9e9e9 !important;
}

.gpii-prefsEditor-theme-default {
    color: #393536;
    background-color: #e9e9e9;
}

.gpii-prefsEditor-theme-yb .gpii-prefsEditor-headerImage {
    background-color: yellow !important;
    color: black !important;
}

.gpii-prefsEditor-theme-bw .gpii-prefsEditor-headerImage {
    background-color: black !important;
    color: white !important;
}

.gpii-prefsEditor-theme-by .gpii-prefsEditor-headerImage {
    background-color: black !important;
    color: yellow !important;
}

.gpii-prefsEditor-theme-wb .gpii-prefsEditor-headerImage {
    background-color: white !important;
    color: black !important;
}

.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-headerImage {
    background-color: #e9e9e9 !important;
    color: #393536 !important;
}

.gpii-prefsEditor-theme-yb .gpii-prefsEditor-headerTitle {
    color: black !important;
}

.gpii-prefsEditor-theme-bw .gpii-prefsEditor-headerTitle {
    color: white !important;
}

.gpii-prefsEditor-theme-by .gpii-prefsEditor-headerTitle {
    color: yellow !important;
}

.gpii-prefsEditor-theme-wb .gpii-prefsEditor-headerTitle {
    color: black !important;
}

.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-headerTitle {
    color: #393536 !important;
}

.gpii-prefsEditor-theme-yb .gpii-prefsEditor-headerClickableLabel,
.gpii-prefsEditor-theme-bw .gpii-prefsEditor-headerClickableLabel,
.gpii-prefsEditor-theme-by .gpii-prefsEditor-headerClickableLabel,
.gpii-prefsEditor-theme-wb .gpii-prefsEditor-headerClickableLabel,
.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-headerClickableLabel {
    background-color: transparent !important;
}

.gpii-prefsEditor-theme-yb .gpii-prefsEditor-addToMyPreferencesLabel,
.gpii-prefsEditor-theme-bw .gpii-prefsEditor-addToMyPreferencesLabel,
.gpii-prefsEditor-theme-by .gpii-prefsEditor-addToMyPreferencesLabel,
.gpii-prefsEditor-theme-wb .gpii-prefsEditor-addToMyPreferencesLabel,
.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-addToMyPreferencesLabel {
    background-color: transparent !important;
}

.gpii-prefsEditor-theme-yb .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: yellow !important;
    color: black !important;
}

.gpii-prefsEditor-theme-bw .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: black !important;
    color: white !important;
}

.gpii-prefsEditor-theme-by .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: black !important;
    color: yellow !important;
}

.gpii-prefsEditor-theme-wb .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: white !important;
    color: black !important;
}

.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: #e9e9e9 !important;
    color: #393536 !important;
}

.gpii-prefsEditor-theme-yb input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: black !important;
    color: yellow !important;
}

.gpii-prefsEditor-theme-bw input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: white !important;
    color: black !important;
}

.gpii-prefsEditor-theme-by input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: yellow !important;
    color: black !important;
}

.gpii-prefsEditor-theme-wb input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: black !important;
    color: white !important;
}

.gpii-prefsEditor-theme-inverted input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
    background-color: #393536 !important;
    color: #e9e9e9 !important;
}

.gpii-prefsEditor-theme-yb [title]:after{
    background-color: black !important;
    border: 1px solid yellow !important;
}

.gpii-prefsEditor-theme-bw [title]:after{
    background-color: white !important;
    border: 1px solid black !important;
}

.gpii-prefsEditor-theme-by [title]:after{
    background-color: yellow !important;
    border: 1px solid black !important;
}

.gpii-prefsEditor-theme-wb [title]:after{
    background-color: black !important;
    border: 1px solid white !important;
}

.gpii-prefsEditor-theme-inverted [title]:after{
    background-color: #e9e9e9 !important;
    border: 1px solid #393536 !important;
}
/* ... */

